--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -69,6 +69,8 @@
   }
 </style>
 {% endblock stylesheets %} {% block content %}
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 <main>
   <section class="sign-in-layout">
     <!-- Left side: Image -->
@@ -113,7 +115,8 @@
               type="password") }}
             </div>
           </div>
-          <div class="d-flex justify-content-between align-items-top mb-4">
+          <div class="g-recaptcha" data-sitekey="{{ config.RECAPTCHA_SITE_KEY }}"></div>
+          <!-- <div class="d-flex justify-content-between align-items-top mb-4">
             <div class="form-check">
               <input
                 class="form-check-input"
@@ -124,13 +127,13 @@
               <label class="form-check-label" for="remember">Remember me</label>
             </div>
             <div>
-              <!-- <a
+              <a
                 href="{{ url_for('authentication_blueprint.register') }}"
                 class="text-muted"
                 >Register</a
-              > -->
+              >
             </div>
-          </div>
+          </div> -->
           <div class="d-grid">
             <button type="submit" name="login" class="btn btn-signin">
               Sign In
